@@ -4058,13 +4058,24 @@ loop:		for(int i = 0; i < seg.count; i++)
 	 */
 	private int getPriorNonEmptyLine(int lineIndex)
 	{
+		int returnValue = -1;
+
 		for(int i = lineIndex - 1; i >= 0; i--)
 		{
-			if(getLineLength(i) != 0)
-				return i;
+			getLineText(i,seg);
+			if(seg.count != 0)
+				returnValue = i;
+			for(int j = 0; j < seg.count; j++)
+			{
+				char ch = seg.array[j];
+				if(!Character.isWhitespace(ch))
+					return i;
+			}
 		}
 
-		return -1;
+		// didn't find a line that contains non-whitespace chars
+		// so return index of prior whitespace line
+		return returnValue;
 	} //}}}
 
 	//{{{ contentInserted() method
